@@ -323,9 +323,28 @@ This function frees the memory associated with the integrator state
 @var{s}.
 @end deftypefun
 
-The @sc{miser} algorithm has several configurable parameters. The
-following variables can be accessed through the
-@code{gsl_monte_miser_state} struct,
+The @sc{miser} algorithm has several configurable parameters which can
+be changed using the following two functions.@footnote{The previous
+method of accessing these fields directly through the
+@code{gsl_monte_miser_state} struct is now deprecated.}
+
+@deftypefun void gsl_monte_miser_params_get (const gsl_monte_miser_state * @var{s}, gsl_monte_miser_params * @var{params}) 
+This function copies the parameters of the integrator state into the
+user-supplied @var{params} structure.
+@end deftypefun
+
+@deftypefun void gsl_monte_miser_params_set (gsl_monte_miser_state * @var{s}, const gsl_monte_miser_params * @var{params}) 
+This function sets the integrator parameters based on values provided
+in the @var{params} structure.
+@end deftypefun
+
+Typically the values of the parameters are first read using
+@code{gsl_monte_miser_params_get}, the necessary changes are made to
+the fields of the @var{params} structure, and the values are copied
+back into the integrator state using
+@code{gsl_monte_miser_params_set}.  The functions use the
+@code{gsl_monte_miser_params} structure which contains the following
+fields:
 
 @deftypevar double estimate_frac
 This parameter specifies the fraction of the currently available number of
@@ -527,23 +546,45 @@ procedure begins with the current estimate.
 The estimates are averaged using the arithmetic mean, but no error is computed.
 @end table
 
-The @sc{vegas} algorithm is highly configurable. The following variables
-can be accessed through the @code{gsl_monte_vegas_state} struct,
+The convergence of the algorithm can be tested using the overall
+chi-squared value of the results, which is available from the
+following function:
 
-@deftypevar double result
-@deftypevarx double sigma
-These parameters contain the raw value of the integral @var{result} and
-its error @var{sigma} from the last iteration of the algorithm.
-@end deftypevar
+@deftypefun double gsl_monte_vegas_chisq (const gsl_monte_vegas_state * @var{s})
+This function returns the chi-squared per degree of freedom for the
+weighted estimate of the integral.  The returned value should be close
+to 1.  A value which differs significantly from 1 indicates that the
+values from different iterations are inconsistent.  In this case the
+weighted error will be under-estimated, and further iterations of the
+algorithm are needed to obtain reliable results.
+@end deftypefun
 
-@deftypevar double chisq
-This parameter gives the chi-squared per degree of freedom for the
-weighted estimate of the integral.  The value of @var{chisq} should be
-close to 1.  A value of @var{chisq} which differs significantly from 1
-indicates that the values from different iterations are inconsistent.
-In this case the weighted error will be under-estimated, and further
-iterations of the algorithm are needed to obtain reliable results.
-@end deftypevar
+@deftypefun void gsl_monte_vegas_runval (const gsl_monte_vegas_state * @var{s}, double * @var{result}, double * @var{sigma})
+This function returns the raw (unaveraged) values of the integral
+@var{result} and its error @var{sigma} from the most recent iteration
+of the algorithm.
+@end deftypefun
+
+The @sc{vegas} algorithm is highly configurable. Several parameters
+can be changed using the following two functions.
+
+@deftypefun void gsl_monte_vegas_params_get (const gsl_monte_vegas_state * @var{s}, gsl_monte_vegas_params * @var{params}) 
+This function copies the parameters of the integrator state into the
+user-supplied @var{params} structure.
+@end deftypefun
+
+@deftypefun void gsl_monte_vegas_params_set (gsl_monte_vegas_state * @var{s}, const gsl_monte_vegas_params * @var{params}) 
+This function sets the integrator parameters based on values provided
+in the @var{params} structure.
+@end deftypefun
+
+Typically the values of the parameters are first read using
+@code{gsl_monte_vegas_params_get}, the necessary changes are made to
+the fields of the @var{params} structure, and the values are copied
+back into the integrator state using
+@code{gsl_monte_vegas_params_set}.  The functions use the
+@code{gsl_monte_vegas_params} structure which contains the following
+fields:
 
 @deftypevar double alpha
 The parameter @code{alpha} controls the stiffness of the rebinning
@@ -589,6 +630,10 @@ weighted average and final result, while a value of @code{1} also
 displays the grid coordinates.  A value of @code{2} prints information
 from the rebinning procedure for each iteration.
 @end deftypevar
+
+The above fields and the @var{chisq} value can also be accessed
+directly in the @code{gsl_monte_vegas_state} but such use is
+deprecated.
 
 @node Monte Carlo Examples
 @section Examples
